[gd_scene load_steps=6 format=3 uid="uid://brhl8kkmkf8im"]

[ext_resource type="Script" path="res://Character/Character.gd" id="1_vxr42"]
[ext_resource type="Script" path="res://Images/Path.gd" id="2_c5abm"]
[ext_resource type="Resource" uid="uid://d015bfgy5mxk2" path="res://Stats/Stats.tres" id="2_ti3mw"]
[ext_resource type="Texture2D" uid="uid://eblhwolmn460" path="res://Images/Texture/TX Player.png" id="3_8l7rs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1gm32"]
atlas = ExtResource("3_8l7rs")
region = Rect2(4.58546, 12.3783, 23.1067, 46.777)

[node name="Character" type="Node2D"]
script = ExtResource("1_vxr42")
char_stats = ExtResource("2_ti3mw")

[node name="Path" type="Node2D" parent="."]
script = ExtResource("2_c5abm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_1gm32")

[node name="CharacterCamera" type="Camera2D" parent="."]
scale = Vector2(4, 2)
enabled = false
zoom = Vector2(5, 5)
limit_left = 0
limit_top = -32
limit_right = 256
limit_bottom = 256
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="VisibilityNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.535651, 0.520002)

[connection signal="char_moving" from="." to="Path" method="_on_character_char_moving"]
[connection signal="char_still" from="." to="Path" method="_on_character_movement_stopped"]
[connection signal="turn_complete" from="." to="Path" method="_on_character_movement_stopped"]
